# axum-sqlite-CRUD-playground

./: .env  Cargo.toml  README.md  axum_sqlite3  bacon.toml  extra.md
src/: main.rs  rustqlite.rs  sqlx.rs
