[package]
name = "rust-sqlite3-clone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum ={version =  "0.8.4", features = ["macros"]}
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "derive", "macros", "json" ] }
anyhow = "1.0.98"
serde = "1.0.219"
